[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.5", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pyrandom"
version = "0.1.0"
description = "Python bindings for the random library"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
readme = "../readme.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "scipy"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
cmake.source-dir = ".."
build-dir = "build/{wheel_tag}"
cmake.targets = ["pyrandom_ext"]
cmake.define = {"ENABLE_PYTHON" = "ON"}
wheel.py-api = "cp312"
wheel.packages = ["pyrandom"]
wheel.exclude = ["pyrandom/tests", "pyrandom/examples", "pyrandom/benchmarks"]
